Batch is wrapped inside a dataframe

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -115,16 +115,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T20:08:04.900935Z",
+     "iopub.status.busy": "2025-02-16T20:08:04.900636Z",
+     "iopub.status.idle": "2025-02-16T20:08:07.408681Z",
+     "shell.execute_reply": "2025-02-16T20:08:07.407462Z",
+     "shell.execute_reply.started": "2025-02-16T20:08:04.900910Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/linuxu/anaconda3/envs/pyspark_TTS/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "INFO:speechbrain.utils.quirks:Applied quirks (see `speechbrain.utils.quirks`): [allow_tf32, disable_jit_profiling]\n",
+      "INFO:speechbrain.utils.quirks:Excluded quirks specified by the `SB_DISABLE_QUIRKS` environment (comma-separated list): []\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from datetime import datetime\n",
     "from ArticleReader.Chunker import Chunker\n",
     "from ArticleReader.LatexToSpeech import LatexParser\n",
     "from ArticleReader.Narrator import Narrator\n",
+    "from Benchmarking import Bench\n",
     "import pandas as pd \n",
     "import json"
    ]
@@ -133,7 +153,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T20:08:07.410704Z",
+     "iopub.status.busy": "2025-02-16T20:08:07.410133Z",
+     "iopub.status.idle": "2025-02-16T20:08:08.295821Z",
+     "shell.execute_reply": "2025-02-16T20:08:08.295270Z",
+     "shell.execute_reply.started": "2025-02-16T20:08:07.410677Z"
+    }
+   },
    "outputs": [],
    "source": [
     "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
@@ -152,7 +180,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:46:02.618383Z",
+     "iopub.status.busy": "2025-02-16T19:46:02.617565Z",
+     "iopub.status.idle": "2025-02-16T19:46:02.642840Z",
+     "shell.execute_reply": "2025-02-16T19:46:02.642220Z",
+     "shell.execute_reply.started": "2025-02-16T19:46:02.618355Z"
+    }
+   },
    "outputs": [],
    "source": [
     "chunker = Chunker(max_len=200)\n",
@@ -161,6 +197,230 @@
     "# chunks = chunker.chunks\n",
     "chunker.save_chunks_as_text(output_file + \".md\", chunks)\n",
     "print(\"text chunks:\", [len(ch) for ch in chunks])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c389ecf-b341-411b-8536-4fb88408cad4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:46:05.617871Z",
+     "iopub.status.busy": "2025-02-16T19:46:05.617226Z",
+     "iopub.status.idle": "2025-02-16T19:46:07.887263Z",
+     "shell.execute_reply": "2025-02-16T19:46:07.886610Z",
+     "shell.execute_reply.started": "2025-02-16T19:46:05.617841Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "narrator = Narrator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e331ac-983c-4ca3-969d-dc07a29cd30c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:20:54.002726Z",
+     "iopub.status.busy": "2025-02-16T19:20:54.002004Z",
+     "iopub.status.idle": "2025-02-16T19:20:54.007718Z",
+     "shell.execute_reply": "2025-02-16T19:20:54.006766Z",
+     "shell.execute_reply.started": "2025-02-16T19:20:54.002684Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# break\n",
+    "# waveforms, durations = narrator.text_to_speech_batched(chunks)\n",
+    "# durations_sec = durations / 22050.0\n",
+    "\n",
+    "# print(\"durations: \", durations_sec)\n",
+    "\n",
+    "# waveform = torch.cat(waveforms, dim=1)\n",
+    "\n",
+    "# print(\"saving audio\")\n",
+    "# narrator.save_audio(output_file + \".wav\", waveform)\n",
+    "\n",
+    "# narrator.save_video(output_file)\n",
+    "\n",
+    "# narrator.generate_srt(chunks, durations_sec, output_file + \".srt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcbada7f-a7cb-4aa9-b37f-514adea931ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "11fc7827-03fa-43b0-9c6e-42a7a8b1e8c0",
+   "metadata": {},
+   "source": [
+    "## Run batch from sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976dc433-1c04-489c-b331-a3a5b188dde3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:22:08.449786Z",
+     "iopub.status.busy": "2025-02-16T19:22:08.448949Z",
+     "iopub.status.idle": "2025-02-16T19:22:08.454052Z",
+     "shell.execute_reply": "2025-02-16T19:22:08.453330Z",
+     "shell.execute_reply.started": "2025-02-16T19:22:08.449757Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "batch_from_sorted = chunker.get_batch_sorted(batch_size=100, start=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d5b5761-982a-4361-98f1-cf71d1da8463",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:22:09.405060Z",
+     "iopub.status.busy": "2025-02-16T19:22:09.404329Z",
+     "iopub.status.idle": "2025-02-16T19:22:09.413033Z",
+     "shell.execute_reply": "2025-02-16T19:22:09.412305Z",
+     "shell.execute_reply.started": "2025-02-16T19:22:09.405033Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "batch_from_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f7f5cd9-f3d2-4180-9ddf-d0d8ebcf653f",
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-02-16T19:39:29.976Z",
+     "iopub.execute_input": "2025-02-16T19:22:31.451341Z",
+     "iopub.status.busy": "2025-02-16T19:22:31.450789Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#batch_converted = narrator.text_to_speech_df(batch_from_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e62284bb-4b49-43ea-a141-ae216713ef77",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:45:31.562078Z",
+     "iopub.status.busy": "2025-02-16T19:45:31.561775Z",
+     "iopub.status.idle": "2025-02-16T19:45:31.576960Z",
+     "shell.execute_reply": "2025-02-16T19:45:31.576051Z",
+     "shell.execute_reply.started": "2025-02-16T19:45:31.562053Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "batch_converted.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d40af90-28da-4d34-b347-0da54d3ea9f4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:14:34.344113Z",
+     "iopub.status.busy": "2025-02-16T19:14:34.343669Z",
+     "iopub.status.idle": "2025-02-16T19:14:53.131874Z",
+     "shell.execute_reply": "2025-02-16T19:14:53.131186Z",
+     "shell.execute_reply.started": "2025-02-16T19:14:34.344084Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "batch_converted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e58d3601-00e0-4803-8250-a4152b9f9bbd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:15:34.412999Z",
+     "iopub.status.busy": "2025-02-16T19:15:34.412359Z",
+     "iopub.status.idle": "2025-02-16T19:15:34.420343Z",
+     "shell.execute_reply": "2025-02-16T19:15:34.419751Z",
+     "shell.execute_reply.started": "2025-02-16T19:15:34.412970Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# restore order of sentences\n",
+    "batch_converted.sort_values(\"index\", ascending=True, inplace=True)\n",
+    "# recombine and save sound\n",
+    "waveform = torch.cat(tuple(batch_converted.waveform), dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69381811-e6bc-4d63-9616-2150719b7566",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:15:39.066816Z",
+     "iopub.status.busy": "2025-02-16T19:15:39.066491Z",
+     "iopub.status.idle": "2025-02-16T19:15:39.099364Z",
+     "shell.execute_reply": "2025-02-16T19:15:39.098711Z",
+     "shell.execute_reply.started": "2025-02-16T19:15:39.066793Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"saving batch\")\n",
+    "narrator.save_audio(output_file + \".wav\", waveform)\n",
+    "chunker.save_chunks_as_text(output_file + \".md\", batch_converted.sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08eb0715-f418-4377-86db-8dc56b8d8294",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:15:45.375510Z",
+     "iopub.status.busy": "2025-02-16T19:15:45.374874Z",
+     "iopub.status.idle": "2025-02-16T19:15:45.380459Z",
+     "shell.execute_reply": "2025-02-16T19:15:45.379910Z",
+     "shell.execute_reply.started": "2025-02-16T19:15:45.375481Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[print(s) for s in batch_converted.sentence]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "481240b2-9584-40b1-924e-9f4f7b0a665b",
+   "metadata": {},
+   "source": [
+    "## TTS benchmarking\n",
+    "Benchmarking batch sizes - how they impact memory utilization"
    ]
   },
   {
@@ -235,16 +495,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "481240b2-9584-40b1-924e-9f4f7b0a665b",
-   "metadata": {},
-   "source": [
-    "## TTS benchmarking\n",
-    "Benchmarking batch sizes - how they impact memory utilization"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "c0c3e27e-c5cf-46d1-8b52-01bf25369b2e",
    "metadata": {},
    "source": [
@@ -255,10 +505,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4c7a29d-fe62-4e6a-aa77-84b8ab5ad682",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:59:41.824680Z",
+     "iopub.status.busy": "2025-02-16T19:59:41.824390Z",
+     "iopub.status.idle": "2025-02-16T19:59:41.829593Z",
+     "shell.execute_reply": "2025-02-16T19:59:41.828967Z",
+     "shell.execute_reply.started": "2025-02-16T19:59:41.824658Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from Benchmarking import Bench\n",
+    "\n",
     "bench = Bench()"
    ]
   },
@@ -266,7 +524,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:49:38.181523Z",
+     "iopub.status.busy": "2025-02-16T19:49:38.180929Z",
+     "iopub.status.idle": "2025-02-16T19:49:38.186227Z",
+     "shell.execute_reply": "2025-02-16T19:49:38.185599Z",
+     "shell.execute_reply.started": "2025-02-16T19:49:38.181483Z"
+    }
+   },
    "outputs": [],
    "source": [
     "case = {\"chunk_length\": 50, # (50 : 50 : 500)\n",
@@ -282,7 +548,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec7989f2-a161-4e7b-b9d0-c8bcdf796200",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:49:39.150386Z",
+     "iopub.status.busy": "2025-02-16T19:49:39.149769Z",
+     "iopub.status.idle": "2025-02-16T19:49:39.153182Z",
+     "shell.execute_reply": "2025-02-16T19:49:39.152648Z",
+     "shell.execute_reply.started": "2025-02-16T19:49:39.150356Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# experiment_run = bench.run_experiment(processed, case)\n",
@@ -295,7 +569,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b610891-f075-4a78-a019-fd72f69aceaa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:49:39.742284Z",
+     "iopub.status.busy": "2025-02-16T19:49:39.741485Z",
+     "iopub.status.idle": "2025-02-16T19:49:39.745188Z",
+     "shell.execute_reply": "2025-02-16T19:49:39.744688Z",
+     "shell.execute_reply.started": "2025-02-16T19:49:39.742239Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#experiment_run"
@@ -314,30 +596,70 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b776f65-e2b7-4101-b712-d6b2678a9ca3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:49:40.791139Z",
+     "iopub.status.busy": "2025-02-16T19:49:40.790330Z",
+     "iopub.status.idle": "2025-02-16T19:49:40.796366Z",
+     "shell.execute_reply": "2025-02-16T19:49:40.795810Z",
+     "shell.execute_reply.started": "2025-02-16T19:49:40.791108Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "grid = {\"chunk_length\": range(50, 500, 50),\n",
-    "     \"batch_size\": (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200),\n",
-    "     \"tts_model\": [\"tts-tacotron2-ljspeech\", \"another\"],\n",
-    "     \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
-    "     \"device\": [\"CPU\"], \n",
+    "fullgrid = {\"chunk_length\": range(50, 500, 50),\n",
+    "             \"batch_size\": (1, 2, 3, 5, 10, 20, 30, 50, 70, 100, 200),\n",
+    "             \"tts_model\": [\"tts-tacotron2-ljspeech\", \"another\"],\n",
+    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "             \"device\": [\"CPU\"], \n",
     "       }\n",
-    "grid"
+    "fullgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae0a36d-6e07-42a3-ba98-b3323aa372fa",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T19:52:29.913229Z",
+     "iopub.status.busy": "2025-02-16T19:52:29.912830Z",
+     "iopub.status.idle": "2025-02-16T19:52:29.918250Z",
+     "shell.execute_reply": "2025-02-16T19:52:29.917674Z",
+     "shell.execute_reply.started": "2025-02-16T19:52:29.913207Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "largegrid = {\"chunk_length\": [50, 1000],\n",
+    "             \"batch_size\": (2, 100),\n",
+    "             \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
+    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "             \"device\": [\"CPU\"],\n",
+    "            }\n",
+    "largegrid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T20:08:13.178671Z",
+     "iopub.status.busy": "2025-02-16T20:08:13.178013Z",
+     "iopub.status.idle": "2025-02-16T20:08:13.186721Z",
+     "shell.execute_reply": "2025-02-16T20:08:13.185996Z",
+     "shell.execute_reply.started": "2025-02-16T20:08:13.178642Z"
+    }
+   },
    "outputs": [],
    "source": [
     "smallgrid = {\"chunk_length\": [50,100],\n",
-    "     \"batch_size\": (1, 2),\n",
-    "     \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
-    "     \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
-    "     \"device\": [\"CPU\"], \n",
+    "             \"batch_size\": (1, 2),\n",
+    "             \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
+    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "             \"device\": [\"CPU\"], \n",
     "       }\n",
     "smallgrid"
    ]
@@ -346,10 +668,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c0297de9-0ac2-498b-94b2-734f253d85de",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-16T20:08:29.505272Z",
+     "iopub.status.busy": "2025-02-16T20:08:29.504491Z",
+     "iopub.status.idle": "2025-02-16T20:08:35.713219Z",
+     "shell.execute_reply": "2025-02-16T20:08:35.711686Z",
+     "shell.execute_reply.started": "2025-02-16T20:08:29.505242Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "bench.run_experiments(processed, smallgrid)"
+    "bench = Bench()\n",
+    "bench.run_experiments(processed, largegrid)"
    ]
   },
   {
