Monitor also child processes memory - Memory Monitors need to be attached to every case - Add some code to visualize the benchmarking data - handle empty output when batch fails - more logging of steps

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -115,29 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T20:08:04.900935Z",
-     "iopub.status.busy": "2025-02-16T20:08:04.900636Z",
-     "iopub.status.idle": "2025-02-16T20:08:07.408681Z",
-     "shell.execute_reply": "2025-02-16T20:08:07.407462Z",
-     "shell.execute_reply.started": "2025-02-16T20:08:04.900910Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/linuxu/anaconda3/envs/pyspark_TTS/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "INFO:speechbrain.utils.quirks:Applied quirks (see `speechbrain.utils.quirks`): [allow_tf32, disable_jit_profiling]\n",
-      "INFO:speechbrain.utils.quirks:Excluded quirks specified by the `SB_DISABLE_QUIRKS` environment (comma-separated list): []\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "from datetime import datetime\n",
@@ -153,15 +134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T20:08:07.410704Z",
-     "iopub.status.busy": "2025-02-16T20:08:07.410133Z",
-     "iopub.status.idle": "2025-02-16T20:08:08.295821Z",
-     "shell.execute_reply": "2025-02-16T20:08:08.295270Z",
-     "shell.execute_reply.started": "2025-02-16T20:08:07.410677Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
@@ -180,15 +153,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:46:02.618383Z",
-     "iopub.status.busy": "2025-02-16T19:46:02.617565Z",
-     "iopub.status.idle": "2025-02-16T19:46:02.642840Z",
-     "shell.execute_reply": "2025-02-16T19:46:02.642220Z",
-     "shell.execute_reply.started": "2025-02-16T19:46:02.618355Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chunker = Chunker(max_len=200)\n",
@@ -203,15 +168,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0c389ecf-b341-411b-8536-4fb88408cad4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:46:05.617871Z",
-     "iopub.status.busy": "2025-02-16T19:46:05.617226Z",
-     "iopub.status.idle": "2025-02-16T19:46:07.887263Z",
-     "shell.execute_reply": "2025-02-16T19:46:07.886610Z",
-     "shell.execute_reply.started": "2025-02-16T19:46:05.617841Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -222,15 +179,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "04e331ac-983c-4ca3-969d-dc07a29cd30c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:20:54.002726Z",
-     "iopub.status.busy": "2025-02-16T19:20:54.002004Z",
-     "iopub.status.idle": "2025-02-16T19:20:54.007718Z",
-     "shell.execute_reply": "2025-02-16T19:20:54.006766Z",
-     "shell.execute_reply.started": "2025-02-16T19:20:54.002684Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# break\n",
@@ -270,15 +219,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "976dc433-1c04-489c-b331-a3a5b188dde3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:22:08.449786Z",
-     "iopub.status.busy": "2025-02-16T19:22:08.448949Z",
-     "iopub.status.idle": "2025-02-16T19:22:08.454052Z",
-     "shell.execute_reply": "2025-02-16T19:22:08.453330Z",
-     "shell.execute_reply.started": "2025-02-16T19:22:08.449757Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_from_sorted = chunker.get_batch_sorted(batch_size=100, start=0)"
@@ -288,15 +229,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d5b5761-982a-4361-98f1-cf71d1da8463",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:22:09.405060Z",
-     "iopub.status.busy": "2025-02-16T19:22:09.404329Z",
-     "iopub.status.idle": "2025-02-16T19:22:09.413033Z",
-     "shell.execute_reply": "2025-02-16T19:22:09.412305Z",
-     "shell.execute_reply.started": "2025-02-16T19:22:09.405033Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_from_sorted"
@@ -306,13 +239,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f7f5cd9-f3d2-4180-9ddf-d0d8ebcf653f",
-   "metadata": {
-    "execution": {
-     "execution_failed": "2025-02-16T19:39:29.976Z",
-     "iopub.execute_input": "2025-02-16T19:22:31.451341Z",
-     "iopub.status.busy": "2025-02-16T19:22:31.450789Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#batch_converted = narrator.text_to_speech_df(batch_from_sorted)"
@@ -322,15 +249,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e62284bb-4b49-43ea-a141-ae216713ef77",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:45:31.562078Z",
-     "iopub.status.busy": "2025-02-16T19:45:31.561775Z",
-     "iopub.status.idle": "2025-02-16T19:45:31.576960Z",
-     "shell.execute_reply": "2025-02-16T19:45:31.576051Z",
-     "shell.execute_reply.started": "2025-02-16T19:45:31.562053Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_converted.columns"
@@ -340,15 +259,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d40af90-28da-4d34-b347-0da54d3ea9f4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:14:34.344113Z",
-     "iopub.status.busy": "2025-02-16T19:14:34.343669Z",
-     "iopub.status.idle": "2025-02-16T19:14:53.131874Z",
-     "shell.execute_reply": "2025-02-16T19:14:53.131186Z",
-     "shell.execute_reply.started": "2025-02-16T19:14:34.344084Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_converted"
@@ -358,15 +269,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e58d3601-00e0-4803-8250-a4152b9f9bbd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:15:34.412999Z",
-     "iopub.status.busy": "2025-02-16T19:15:34.412359Z",
-     "iopub.status.idle": "2025-02-16T19:15:34.420343Z",
-     "shell.execute_reply": "2025-02-16T19:15:34.419751Z",
-     "shell.execute_reply.started": "2025-02-16T19:15:34.412970Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# restore order of sentences\n",
@@ -379,15 +282,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "69381811-e6bc-4d63-9616-2150719b7566",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:15:39.066816Z",
-     "iopub.status.busy": "2025-02-16T19:15:39.066491Z",
-     "iopub.status.idle": "2025-02-16T19:15:39.099364Z",
-     "shell.execute_reply": "2025-02-16T19:15:39.098711Z",
-     "shell.execute_reply.started": "2025-02-16T19:15:39.066793Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"saving batch\")\n",
@@ -399,15 +294,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "08eb0715-f418-4377-86db-8dc56b8d8294",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:15:45.375510Z",
-     "iopub.status.busy": "2025-02-16T19:15:45.374874Z",
-     "iopub.status.idle": "2025-02-16T19:15:45.380459Z",
-     "shell.execute_reply": "2025-02-16T19:15:45.379910Z",
-     "shell.execute_reply.started": "2025-02-16T19:15:45.375481Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "[print(s) for s in batch_converted.sentence]"
@@ -429,7 +316,7 @@
    "id": "93ccbc4c-8a42-4485-9ef7-ab5cc6160108",
    "metadata": {},
    "source": [
-    "Experiment report v.1  \n",
+    "#### Experiment report v.1  \n",
     "schema of the json file   \n",
     "```\n",
     "variables: \n",
@@ -466,7 +353,7 @@
    "id": "3ff99115-2830-4215-9d5d-6df6331b8750",
    "metadata": {},
    "source": [
-    "Experiment report v.2 \n",
+    "#### Experiment report v.2 \n",
     "schema of the json file   \n",
     "```\n",
     "\n",
@@ -505,15 +392,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4c7a29d-fe62-4e6a-aa77-84b8ab5ad682",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:59:41.824680Z",
-     "iopub.status.busy": "2025-02-16T19:59:41.824390Z",
-     "iopub.status.idle": "2025-02-16T19:59:41.829593Z",
-     "shell.execute_reply": "2025-02-16T19:59:41.828967Z",
-     "shell.execute_reply.started": "2025-02-16T19:59:41.824658Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -524,15 +403,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38a82c6d-3478-4aa2-ac56-3a6aa2520aba",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:49:38.181523Z",
-     "iopub.status.busy": "2025-02-16T19:49:38.180929Z",
-     "iopub.status.idle": "2025-02-16T19:49:38.186227Z",
-     "shell.execute_reply": "2025-02-16T19:49:38.185599Z",
-     "shell.execute_reply.started": "2025-02-16T19:49:38.181483Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "case = {\"chunk_length\": 50, # (50 : 50 : 500)\n",
@@ -548,15 +419,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec7989f2-a161-4e7b-b9d0-c8bcdf796200",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:49:39.150386Z",
-     "iopub.status.busy": "2025-02-16T19:49:39.149769Z",
-     "iopub.status.idle": "2025-02-16T19:49:39.153182Z",
-     "shell.execute_reply": "2025-02-16T19:49:39.152648Z",
-     "shell.execute_reply.started": "2025-02-16T19:49:39.150356Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# experiment_run = bench.run_experiment(processed, case)\n",
@@ -569,15 +432,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b610891-f075-4a78-a019-fd72f69aceaa",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:49:39.742284Z",
-     "iopub.status.busy": "2025-02-16T19:49:39.741485Z",
-     "iopub.status.idle": "2025-02-16T19:49:39.745188Z",
-     "shell.execute_reply": "2025-02-16T19:49:39.744688Z",
-     "shell.execute_reply.started": "2025-02-16T19:49:39.742239Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#experiment_run"
@@ -596,15 +451,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b776f65-e2b7-4101-b712-d6b2678a9ca3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:49:40.791139Z",
-     "iopub.status.busy": "2025-02-16T19:49:40.790330Z",
-     "iopub.status.idle": "2025-02-16T19:49:40.796366Z",
-     "shell.execute_reply": "2025-02-16T19:49:40.795810Z",
-     "shell.execute_reply.started": "2025-02-16T19:49:40.791108Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fullgrid = {\"chunk_length\": range(50, 500, 50),\n",
@@ -619,16 +466,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smallgrid = {\"chunk_length\": [75,100],\n",
+    "             \"batch_size\": (2, 3),\n",
+    "             \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
+    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
+    "             \"device\": [\"CPU\"], \n",
+    "       }\n",
+    "smallgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e2a5c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bench = Bench()\n",
+    "bench.run_experiments(processed, smallgrid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ae0a36d-6e07-42a3-ba98-b3323aa372fa",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T19:52:29.913229Z",
-     "iopub.status.busy": "2025-02-16T19:52:29.912830Z",
-     "iopub.status.idle": "2025-02-16T19:52:29.918250Z",
-     "shell.execute_reply": "2025-02-16T19:52:29.917674Z",
-     "shell.execute_reply.started": "2025-02-16T19:52:29.913207Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "largegrid = {\"chunk_length\": [50, 1000],\n",
@@ -643,54 +509,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T20:08:13.178671Z",
-     "iopub.status.busy": "2025-02-16T20:08:13.178013Z",
-     "iopub.status.idle": "2025-02-16T20:08:13.186721Z",
-     "shell.execute_reply": "2025-02-16T20:08:13.185996Z",
-     "shell.execute_reply.started": "2025-02-16T20:08:13.178642Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "smallgrid = {\"chunk_length\": [50,100],\n",
-    "             \"batch_size\": (1, 2),\n",
-    "             \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
-    "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
-    "             \"device\": [\"CPU\"], \n",
-    "       }\n",
-    "smallgrid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c0297de9-0ac2-498b-94b2-734f253d85de",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-16T20:08:29.505272Z",
-     "iopub.status.busy": "2025-02-16T20:08:29.504491Z",
-     "iopub.status.idle": "2025-02-16T20:08:35.713219Z",
-     "shell.execute_reply": "2025-02-16T20:08:35.711686Z",
-     "shell.execute_reply.started": "2025-02-16T20:08:29.505242Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bench = Bench()\n",
     "bench.run_experiments(processed, largegrid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc040943",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "break"
    ]
   },
   {
@@ -707,52 +531,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "ec01b478-ce93-4a21-8eec-78f8ff764879",
-   "metadata": {},
-   "source": [
-    "### Load gathered data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defa74e9-d802-49c4-9782-85903765cd2d",
+   "id": "5c4dca33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "213ba5b4-7893-4c11-8744-9653b913d998",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78b6ff38-54f1-4e84-bec2-8fa5184d2b31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths = Path(\"benchmark\").glob(\"*.json\")\n",
-    "bnch_data = pd.concat([pd.read_json(p, orient=\"records\") for p in paths])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ad61d6d-701e-44a8-8e4d-5f1944c6f50c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bnch_data"
+    "bnch_data.columns"
    ]
   },
   {
