Narrator.infer model failure handling improved some progress in limiting memory

--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3012adb6-6d2c-49a4-8e04-eda485d271dd",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3f2b1a90-97c5-42c5-be11-08cc4fdb709f",
    "metadata": {},
    "outputs": [],
@@ -151,10 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a8688131-5656-4c4a-9525-75634809aaf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Chunker' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chunker \u001b[39m=\u001b[39m Chunker(max_len\u001b[39m=\u001b[39m\u001b[39m200\u001b[39m)\n\u001b[1;32m      2\u001b[0m chunker\u001b[39m.\u001b[39msplit_text_into_chunks(processed)\n\u001b[1;32m      3\u001b[0m chunks \u001b[39m=\u001b[39m chunker\u001b[39m.\u001b[39mget_test_batch(\u001b[39m10\u001b[39m, \u001b[39m0\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Chunker' is not defined"
+     ]
+    }
+   ],
    "source": [
     "chunker = Chunker(max_len=200)\n",
     "chunker.split_text_into_chunks(processed)\n",
@@ -466,6 +478,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ebd4edd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from datetime import datetime\n",
+    "from ArticleReader.Chunker import Chunker\n",
+    "from ArticleReader.LatexToSpeech import LatexParser\n",
+    "from ArticleReader.Narrator import Narrator\n",
+    "from Benchmarking import Bench\n",
+    "import pandas as pd \n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aabe87b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file = \"data/arXiv-2106.04624v1/main.tex\"\n",
+    "output_file = \"output/\" + datetime.now().strftime(r\"%y.%m.%d-%H\")\n",
+    "\n",
+    "parser = LatexParser()\n",
+    "content = parser.read_latex(input_file)\n",
+    "processed = parser.custom_latex_to_text(content)\n",
+    "parser.save_text(processed, \"dbg/spec_my.txt\")\n",
+    "\n",
+    "tables = parser.get_tables()\n",
+    "parser.save_text(tables, \"dbg/tables.tex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "993a0c6b-4177-4c44-bed6-a610a310fdf0",
    "metadata": {},
    "outputs": [],
@@ -497,8 +545,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "largegrid = {\"chunk_length\": [50, 1000],\n",
-    "             \"batch_size\": (2, 100),\n",
+    "largegrid = {\"chunk_length\": [1000],\n",
+    "             \"batch_size\": (100, 2),\n",
     "             \"tts_model\": [\"tts-tacotron2-ljspeech\"],\n",
     "             \"vocoder_model\": [\"tts-hifigan-ljspeech\"],\n",
     "             \"device\": [\"CPU\"],\n",
@@ -513,8 +561,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "bench = Bench()\n",
     "bench.run_experiments(processed, largegrid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a193e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1270546432 /  1.074e+9"
    ]
   },
   {
